--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 			<div class="text">
-				<p class="am-navigation-text">Fotografía > Blanco y negro (234)</p>
+				<p class="am-navigation-text uppercase">{{data.filters.currentCategory}}</p>
 			</div>
 			<div class="filter right">
 				<div class="am-Select">
