--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -43,12 +43,12 @@
 	<script type="text/template" id="template-filter-item">
 		<div class="am-Filter-item">
 			<% if (meta === "category") { %>
-				<p class="am-Filter-option" data-meta=<%= meta %> data-value=<%= nameSlugify %> ><%= name %>
+				<p class="am-Filter-option uppercase" data-meta=<%= meta %> data-value=<%= nameSlugify %> ><%= name %>
 					<i class="fa fa-chevron-right"></i>
 				</p>
 			<% } %>
 			<% if (meta === "order") { %>
-				<p class="am-Filter-option" data-meta=<%= meta %> data-value=<%= name %> ><%= name %>
+				<p class="am-Filter-option uppercase" data-meta=<%= meta %> data-value=<%= name %> ><%= name %>
 					<i class="fa fa-chevron-right"></i>
 				</p>
 			<% } %>
