--- a/app/views/discover-artists.html
+++ b/app/views/discover-artists.html
@@ -93,10 +93,9 @@
 	<!-- <div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40"> -->
 	<div class="discover-content menu_open grid-container u-padding-top-10 u-padding-bottom-40">
 		<div class="grid-100 grid-parent">
-			{% include './partials/layout-artists.html' %}
-		</div>
-		<div class="grid-100 u-margin-top-10">
-			<a class="am-More-button">I need more</a>
+			<div class="grid work-layout-discover">
+
+			</div>
 		</div>
 	</div>
 
@@ -111,11 +110,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
 
 	<script type="text/javascript">
-		setTimeout(function () {
-			new Masonry( document.querySelector('.grid'), {
-				itemSelector: '.grid-item',
-			})
-		}, 1000)
+		new Masonry( document.querySelector('.grid'), {
+			itemSelector: '.grid-item',
+		})
 	</script>
 
 {% endblock %}
