--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -60,6 +60,48 @@
 			<img src="<%= photo %>">
 		</div>
 	</script>
+
+	<script type="text/template" id="template-user">
+		<div class="grid-item">
+	  	<div class="artist-card">
+	  		<div class="artist-card-info">
+	  			<img src="<%=photo%>">
+	  			<div>
+	  				<p class="name uppercase"><%=firstname%></p>
+	  				<p class="city"><%=city%>, <%=country%></p>
+	  				<p class="stats"><i class="fa fa-diamond"></i><%=numOfFollowers%></p>
+	  			</div>
+	  		</div>
+	  		<div class="artist-card-works">
+					<% _.each(Works, function(work) { %>
+						<div class="artist-card-work">
+							<img src=<%=work.photo%>></img>
+						</div>
+					<% }); %>
+	  		</div>
+	  		<div class="artist-card-follow">
+					<button class="am-Follow-button">+ SEGUIR</button>
+	  		</div>
+	  	</div>
+	  </div>
+	</script>
+	<script type="text/template" id="template-product">
+		<div class="grid-item">
+	  	<div class="product-card">
+	  		<div class="product-card-image">
+					<img src="<%= photo %>"/>
+				</div>
+	  		<div class="product-card-data">
+	  			<p><%= name %></p>
+	  			<p><%= User.firstname %></p>
+	  		</div>
+	  		<div class="product-card-stats">
+	  			<p><%= price %></p>
+	  			<p><%= likes %> &nbsp;&nbsp;&nbsp;<i class="fa fa-diamond"></i></p>
+	  		</div>
+	  	</div>
+	  </div>
+	</script>
 	{% block scripts %} {% endblock %}
 </body>
 </html>
