add pagination effects to products

--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 	<div class="grid-100 u-margin-top-10">
-		<ul class="am-Pagination">
+		<ul class="am-Pagination" style="text-align:right;">
 
 		</ul>
 	</div>
