delete width items

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -964,7 +964,11 @@ white = #fff
 	margin auto
 	padding 10px 0
 
-
+/*------------------------------------*
+	$ WORK LAYOUT DISCOVER
+*------------------------------------*/
+.discover-content
+	min-height 750px
 
 /*------------------------------------*
 	$ WORK LAYOUT DISCOVER
