--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -83,7 +83,7 @@ function onReady() {
 	var $container = $('.grid');
 	$container.imagesLoaded(function(){
 		$container.masonry({
-			columnWidth: 120,
+			// columnWidth: 120,
 			itemSelector: '.grid-item'
 		});
 	});
