active class in switch button

--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="am-Filter-item">
 							<div class="am-Filter-switch">
-								<div class="am-Switch-button">
+								<div class="am-Switch-button active">
 									<i class="fa fa-bars"></i>
 								</div>
 								<span>Seleccionado AM</span>
