--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -34,12 +34,11 @@
 	cursor pointer
 
 .am-Switch-button
-	background: #88d68f;
+	background: #ccc;
 	border-radius: 32px;
 	width: 38px;
 	height: 20px;
 	display: flex;
-	justify-content: flex-end;
 	align-items: center;
 	padding: 0 1px;
 	cursor pointer
@@ -53,6 +52,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	&.active
+		justify-content: flex-end;
+		background: #88d68f;
 
 .am-Follow-button
 	border-radius 4px
