--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -34,6 +34,8 @@
 	  };
 	</script>
 	<script src='/app.min.js'></script>
+	<script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.min.js"></script>
 	<script>
     $(document).ready(onReady);
 	 	function onReady() {
