--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -55,14 +55,15 @@
 						<a class="am-Header-text" href="#">HOME</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">DESCUBRE <i class="fa fa-caret-down"></i></a>
+						<a class="am-Header-text" href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">TIENDA <i class="fa fa-caret-down"></i></a>
+						<a class="am-Header-text" href="/works/category/all/page-1/?order=popularity">OBRAS</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">RETOS</a>
+						<a class="am-Header-text" href="/products/type/all/page-1?order=popularity">TIENDA</a>
 					</li>
+
 					<li class="am-Header-menu-item">
 						<a class="am-Signin-button" href="#"><i class="fa fa-user"></i> INGRESAR</a>
 					</li>
