--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -54,5 +54,9 @@
 {% endblock %}
 
 {% block scripts %}
-  
+	<script>
+		$(document).ready(function() {
+			new APP.Viewer('user', $('.grid'), 'infinite', null);
+		});
+	</script>
 {% endblock %}
