switch buttion change

--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -52,7 +52,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-	&.active
+	&[data-state="active"]
 		justify-content: flex-end;
 		background: #88d68f;
 
