--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -24,7 +24,7 @@
 						</div>
 						<div class="am-Filter-item">
 							<div class="am-Filter-switch">
-								<div class="am-Switch-button active">
+								<div class="am-Switch-button" data-state="active">
 									<i class="fa fa-bars"></i>
 								</div>
 								<span>Seleccionado AM</span>
@@ -89,6 +89,14 @@
 					filterLeft.attr('data-state', 'closed')
 					discoverContent.attr('data-state', 'reduce')
 				}
+			})
+
+			var switchButton = $('.am-Switch-button')
+			$(switchButton).click(function () {
+				var state = switchButton.attr('data-state')
+				console.log('state: ', state)
+				if(state == "active") switchButton.attr('data-state', 'inactive')
+				else switchButton.attr('data-state', 'active')
 			})
 	});
 </script>
