--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -2,7 +2,81 @@
 	<!-- ********************************************************************
 		$ FOOTER
 	********************************************************************* -->
-	<footer class="am-Footer u-padding-top-40 u-padding-bottom-40">
+
+	<footer class="am-Footer">
+		<div class="grid-container">
+			<div class="grid-100 grid-parent">
+				<div class="footer">
+					<div class="footer-logo">
+						<img src="/img/logo-small-white.png">
+						<p class="am-Copy-text u-padding-top-30">
+							© 2015 Arte Manifiesto <br>
+							Todos los derechos reservados
+						</p>
+					</div>
+					<div class="footer-links">
+						<table class="am-Footer-list">
+						  <tr>
+						    <td class="am-Footer-title-text">HOME</td>
+						    <td class="am-Footer-item-text">Sobre AM</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-title-text">DESCUBRE</td>
+						    <td class="am-Footer-item-text">Contacto</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-title-text">MARKET</td>
+						    <td class="am-Footer-item-text">Términos de servicio</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-title-text">ARTISTAS</td>
+						    <td class="am-Footer-item-text">Políticas de privacidad</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-title-text">COLECCIÓN</td>
+						    <td class="am-Footer-item-text">Cómo comprar</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-title-text" style="padding-bottom: 0;">AYUDA</td>
+						    <td class="am-Footer-item-text" style="padding-bottom: 0;">Cómo vender</td>
+						  </tr>
+						</table>
+					</div>
+					<div class="footer-socials">
+						<p class="am-Footer-subtitle-text u-padding-bottom-20">SÍGUENOS</p>
+						<table class="am-Footer-list">
+						  <tr>
+						    <td class="am-Footer-item-text social"><i class="fa fa-facebook"></i></td>
+						    <td class="am-Footer-item-text">Facebook</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-item-text social"><i class="fa fa-twitter"></i></td>
+						    <td class="am-Footer-item-text">Twitter</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-item-text social"><i class="fa fa-instagram"></i></td>
+						    <td class="am-Footer-item-text">Instagram</td>
+						  </tr>
+						  <tr>
+						    <td class="am-Footer-item-text social" style="padding-bottom: 0;"><i class="fa fa-rss"></i></td>
+						    <td class="am-Footer-item-text" style="padding-bottom: 0;">RSS</td>
+						  </tr>
+						</table>
+					</div>
+					<div class="footer-suscribe">
+						<p class="am-Footer-subtitle-text u-padding-bottom-15">SUBSCRÍBETE AL BOLETÍN</p>
+						<p class="am-Footer-text u-padding-bottom-20">Lo más nuevo, fresco y valioso de la <br> comunidad de creadores visuales</p>
+						<div class="am-Email-input">
+							<input type="text" placeholder="E-mail"/>
+							<i class="fa fa-envelope-o"></i>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<!-- <footer class="am-Footer u-padding-top-40 u-padding-bottom-40">
 		<div class="grid-container">
 			<div class="grid-20 mobile-grid-40 am-Footer-section">
 				<div>
@@ -75,4 +149,4 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
