new signin button

--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -3,13 +3,16 @@
 *------------------------------------*/
 .am-Signin-button
 	font-family 'Montserrat', sans-serif
-	background dark-seafoam-green
+	// background dark-seafoam-green
+	background #3bd64a
 	border-radius 100px
 	letter-spacing 2px
 	padding 8px 12px
 	font-weight bold
 	font-size 11px
 	color white
+	// border solid 1px #979797
+	box-shadow 1px 2px 1px 0 rgba(black, .5)
 
 .am-Upload-button
 	font-family 'Montserrat', sans-serif
