--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -11,7 +11,7 @@
 <div class="grid-container u-padding-top-20">
 	<div class="grid-100 grid-parent">
 		<div class="discover-menu">
-			<div class="filter left">
+			<div class="filter left" data-state="open">
 				<div class="am-Select">
 					CATEGORÍAS &nbsp;&nbsp;<i class="fa fa-caret-left"></i>
 				</div>
@@ -24,7 +24,7 @@
 						</div>
 						<div class="am-Filter-item">
 							<div class="am-Filter-switch">
-								<div class="am-Switch-button">
+								<div class="am-Switch-button" data-state="active">
 									<i class="fa fa-bars"></i>
 								</div>
 								<span>Seleccionado AM</span>
@@ -41,7 +41,7 @@
 			<div class="text">
 				<p class="am-navigation-text uppercase">{{data.filters.currentCategory}}</p>
 			</div>
-			<div class="filter right">
+			<div class="filter right" data-state="closed">
 				<div class="am-Select">
 					ORDENAR &nbsp;&nbsp;<i class="fa fa-caret-down"></i>
 				</div>
@@ -54,22 +54,51 @@
 	</div>
 </div>
 
-<!-- defoult state 	= menu closed -->
-<!-- new state 			= menu open -->
-<!-- <div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40"> -->
-<div class="discover-content menu_open grid-container u-padding-top-10 u-padding-bottom-40">
+<div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40" data-state="expand">
 	<div class="grid-100 grid-parent">
 		<div class="grid work-layout-discover">
 		</div>
 	</div>
 </div>
-
 {% endblock %}
 
 {% block scripts %}
 <script>
 	$(document).ready(function() {
 		new APP.DiscoverScreen('user', $('.grid'), 'infinite', {{data|json|safe}});
+
+		var filterRight = $('.filter.right')
+		var rightSelect = $('.filter.right .am-Select')
+
+		$(rightSelect).click(function () {
+			var state = filterRight.attr('data-state')
+			if(state == 'closed') filterRight.attr('data-state', 'open')
+			else filterRight.attr('data-state', 'closed')
+		})
+
+		var filterLeft = $('.filter.left')
+		var leftSelect = $('.filter.left .am-Select')
+		var discoverContent = $('.discover-content')
+
+		$(leftSelect).click(function () {
+			var state = filterLeft.attr('data-state')
+			if(state == 'closed') {
+				filterLeft.attr('data-state', 'open')
+				discoverContent.attr('data-state', 'expand')
+			}
+			else{
+				filterLeft.attr('data-state', 'closed')
+				discoverContent.attr('data-state', 'reduce')
+			}
+		})
+
+		var switchButton = $('.am-Switch-button')
+		$(switchButton).click(function () {
+			var state = switchButton.attr('data-state')
+			console.log('state: ', state)
+			if(state == "active") switchButton.attr('data-state', 'inactive')
+			else switchButton.attr('data-state', 'active')
+		})
 	});
 </script>
 
