--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -48,24 +48,37 @@
 		<div class="grid-100">
 			<header class="am-Header">
 				<figure class="am-Header-logo">
-					<img src="/img/logo.png">
+					<a href="/">
+						<img class="large" src="/img/logo.png">
+						<img class="small" src="/img/logo-small.png">
+					</a>
 				</figure>
 				<ul class="am-Header-menu">
+					<!-- <li class="am-Header-menu-item">
+						<a class="am-Header-text" href="#">
+							<p>HOME</p>
+						</a>
+					</li> -->
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="#">HOME</a>
+						<a class="am-Header-text" href="/users/specialty/all/page-1?order=popularity">
+							<p>ARTISTAS</p><i class="fa fa-heart-o"></i>
+						</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="/users/specialty/all/page-1?order=popularity">ARTISTAS</a>
+						<a class="am-Header-text" href="/works/category/all/page-1/?order=popularity">
+							<p>OBRAS</p><i class="fa fa-paint-brush"></i>
+						</a>
 					</li>
 					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="/works/category/all/page-1/?order=popularity">OBRAS</a>
-					</li>
-					<li class="am-Header-menu-item">
-						<a class="am-Header-text" href="/products/type/all/page-1?order=popularity">TIENDA</a>
+						<a class="am-Header-text" href="/products/type/all/page-1?order=popularity">
+							<p>TIENDA</p><i class="fa fa-diamond"></i>
+						</a>
 					</li>
 
 					<li class="am-Header-menu-item">
-						<a class="am-Signin-button" href="#"><i class="fa fa-user"></i> INGRESAR</a>
+						<a class="am-Signin-button" href="#">
+							<i class="fa fa-user"></i> INGRESAR
+						</a>
 					</li>
 				</ul>
 			</header>
